--- a/dog-api/src/assets/main.css
+++ b/dog-api/src/assets/main.css
@@ -1,12 +1,5 @@
 @import './base.css';
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  font-weight: normal;
-}
-
 a,
 .green {
   text-decoration: none;
@@ -21,15 +14,9 @@ a,
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1px) {
   body {
     display: flex;
-    place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
+    background-color: var(--vt-c-white);
   }
 }
